@startuml splendor_validator
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam rankdir LR
skinparam shadowing false
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0
skinparam padding 2
skinparam nodesep 20
skinparam ranksep 30

title Splendor — Validator Sub-package (com.splendor.model.validator)

package "com.splendor.model.validator" {
  class GameRuleValidator {
    +GameRuleValidator()
    +validateGameStart(playerCount: int, winningPoints: int, maxTokens: int): void
    +validateNobleAssignment(game: Game, player: Player, noble: Noble): void
  }
  class MoveValidator {
    +MoveValidator(configProvider: IConfigProvider)
    +validateMove(move: Move, player: Player, game: Game): void
    +getRuleExplanation(move: Move, player: Player, game: Game): ValidationResult
    +canPlayerAffordCard(player: Player, card: Card): boolean
    +getMaxReservedCards(): int
  }
  class ValidationResult {
    +ValidationResult(valid: boolean, message: String)
    +isValid(): boolean
    +getMessage(): String
    +{static} ok(): ValidationResult
    +{static} fail(reason: String): ValidationResult
  }
  MoveValidator ..> ValidationResult : returns
}

package "com.splendor.exception" {
  class GameStateException
  class InvalidMoveException
  class InsufficientTokensException
  class SplendorException
}

GameRuleValidator ..> GameStateException : throws
MoveValidator ..> InvalidMoveException : throws
MoveValidator ..> InsufficientTokensException : throws
MoveValidator ..> SplendorException : throws

@enduml
